--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <section class="promo">
+  <section id="up" class="promo">
     <div class="logo__background "></div>
     <div class="container">
       <header class="header">
@@ -72,7 +72,7 @@
           так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
       </div>
       <div class="advantages__item">
-        <img src="./icons/seclist/heart.png" alt="" class="advantages__icon">
+        <img src="./icons/seclist/heart.png" alt="" class="advantages__icon advantages__icon_animated">
         <div class="advantages__subtitle">Заботимся о здоровье</div>
         <div class="advantages__descr">Мы работаем для того, 
           чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
@@ -468,8 +468,12 @@
     <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время</div>
   </div>
 
-
 </div>
+
+<a href="#up" class="pageup">
+  <img src="icons/up.svg" alt="up">
+</a>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
