--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
 
 <div class="catalog">
   <button data-modal="consultation" class="button button_main">заказать консультацию</button>
-  <button class="button button_main xs-visible">Перейти в каталог</button>
+  <button class="button button_main xs-visible"><a href="#catalog">перейти в каталог</a></button>
   <div class="promo__link xs-hidden">
   или
-  <a href="#">перейти в каталог</a>
+  <a href="#catalog">перейти в каталог</a>
 
 </div>
 </div>
@@ -120,7 +120,7 @@
 </div>
 </div>
   
-<section class="catalog">
+<section class="catalog" id="catalog">
   <div class="container">
   <h2 class="title">Каталог пульсометров</h2>
   <ul class="catalog__tabs">
